# openQuant

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  opencode.json  researcher.md
projects/agentic_portfolio/: README.md  pyproject.toml
projects/agentic_portfolio/app/: __init__.py  config.py  main.py  schemas.py
projects/agentic_portfolio/app/api/: router.py
projects/agentic_portfolio/app/api/routes/: auth.py  capabilities.py  dashboard.py  diagnostics.py  engine.py  findings.py  gateway.py  health.py  (+14 more)
projects/agentic_portfolio/app/domain/: core_models.py
projects/agentic_portfolio/app/services/: auth_service.py  broker_adapters.py  capability_service.py  channel_gateway_service.py  connector_routing_service.py  dashboard_service.py  diagnostics_service.py  engine_service.py  finding_query_service.py  flat_routing_agent_service.py  ibkr_cpapi_market_service.py  instrument_query_service.py  memory_summary_service.py  model_service.py  mt5_connector.py  open_data_service.py  open_stock_service.py  openclaw_runtime.py  order_query_service.py  platform_service.py  portfolio_query_service.py  provider_gateway.py  provider_registry.py  report_query_service.py  research_adapter.py  route_trace_service.py  run_recorder.py  runtime_agent_registry.py  runtime_orchestrator_service.py  runtime_router.py  runtime_status_service.py  runtime_workspace_service.py  secret_storage_service.py  session_binding_service.py  watchlist_query_service.py  world_monitor_service.py
projects/agentic_portfolio/app/storage/: __init__.py  duckdb_store.py  sqlite_store.py  v21_store.py
(+98 files in other folders)
